--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-  "prisma:generate": "prisma generate",
-  "prisma:push": "prisma db push",
-  "dev": "tsx src/server.ts",
-  "start": "node dist/server.js",
-  "build": "tsc",
-  "seed": "tsx prisma/seed.ts",
-  "crawl:google": "tsx src/googleTrendsCrawler.ts",
-  "worker": "tsx src/trendWorker.ts"
-},
+    "prisma:generate": "prisma generate",
+    "prisma:push": "prisma db push",
+    "dev": "tsx src/server.ts",
+    "start": "node dist/server.js",
+    "build": "tsc",
+    "seed": "tsx prisma/seed.ts",
+    "crawl:google": "tsx src/googleTrendsCrawler.ts",
+    "worker": "tsx src/trendWorker.ts"
+  },
   "dependencies": {
     "@prisma/client": "^6.16.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
     "openai": "^5.20.2",
     "p-limit": "^7.1.1",
     "playwright": "^1.55.0"
@@ -24,7 +26,9 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.2",
+    "@types/node-fetch": "^2.6.13",
     "nodemon": "^3.1.10",
     "prisma": "^6.16.1",
     "ts-node": "^10.9.2",
